app/assets/stylesheets/bootstrap_and_overrides.css.less
/* ==========================================================================
   Bootstrap and overrides
   ========================================================================== */

@import "twitter/bootstrap/bootstrap";

body {
  padding-top: 60px;
}

@import "twitter/bootstrap/responsive";


/* Fontawesome Icons
   ========================================================================== */

@fontAwesomeEotPath: asset-path("fontawesome-webfont.eot");
@fontAwesomeEotPath_iefix: asset-path("fontawesome-webfont.eot#iefix");
@fontAwesomeWoffPath: asset-path("fontawesome-webfont.woff");
@fontAwesomeTtfPath: asset-path("fontawesome-webfont.ttf");
@fontAwesomeSvgPath: asset-path("fontawesome-webfont.svg");
@import "fontawesome";


/* Overriding default variables and loading new ones
   ========================================================================== */

@import "stubs/variables_overrides.css.less";


/* ==========================================================================
   Google Places Autocompletion
   ========================================================================== */

.pac-container {
  z-index: @zindexFixedNavbar + 1 !important;
  min-width: 200px;
  .border-radius(4px);
  margin-top: 2px; // give it some space to breathe

  .pac-item {
    padding: 3px 15px;
    line-height: 18px;
    &:hover {
      color: @white;
      background-color: @linkColor;
    }
  }

  &::after {
    padding-right: 3px;
  }
}


/* ==========================================================================
   Carousel fade effect
   ========================================================================== */

&.carousel-fade {
  .item {
   .transition(opacity 1s ease-in-out);
  }

  .active {
    &.left, &.right {
      z-index: 2;
      left: 0;
      .opacity(0);
    }
  }

  .next, .prev {
    z-index: 1;
    left: 0;
  }

  .carousel-control {
    z-index: 3;
  }
}


/* ==========================================================================
   Fixes
   ========================================================================== */

/* Icon antialiasing fix */
i[class^="icon-"] {
  -webkit-font-smoothing: antialiased
}

/* Icon Button Fix */
.btn {
  i.icon-large[class^="icon-"] {
    margin-right: 3px;
  }
}

/* Modal focus fix */
.modal-open .modal, a[data-toggle="modal"] { outline: none; }

/* Collapse dropdown */
@media(max-width: 979px) {
  .nav-collapse .dropdown-menu:before,
  .nav-collapse .dropdown-menu:after,
  .nav-collapse li.dropdown > .dropdown-toggle .caret {
    display: none !important;
  }
}

/* Button navbar fix */
.btn-navbar:hover {
  background-color: darken(@icareMainColor, 5%) !important;
}

/* .btn-mini .caret fix */
.btn-mini .caret, .btn-small .caret, .btn-large .caret {
  margin-top: 8px !important;
}

/* ==========================================================================
   Global styles
   ========================================================================== */

.legend-like {
  display: block;
  width: 100%;
  padding: 0;
  margin-bottom: @baseLineHeight / 2;
  font-weight: normal;
  border: 0;
  border-bottom: 1px solid #eee;

  small {
    font-size: @baseLineHeight * .75;
    color: @grayLight;
  }
}

/* Lighter modal backdrop */
.modal-backdrop,
.modal-backdrop.fade.in {
  .opacity(60);
}

.modal-header {
  background-color: #f5f5f5;
  .border-radius(6px 6px 0 0);
}

.form-actions {
  background: none;
}

h1,
h2,
h3,
h4 {
  font-family: @headerFontFamily;
}

h1,
h2,
h3 {
  color: @headerColor;
  text-shadow: 1px 1px 0 fade(@white, 25%);
}

h4,
h5,
h6 {
  text-rendering: optimizeLegibility;
}

h1 {
  margin-bottom: 15px;
}

/* New Buttons
   ========================================================================== */

.btn-pink {
  .buttonBackground(lighten(@pink, 5%), @pink);
}

.btn-pink.active {
  color: rgba(255, 255, 255, .75);
}

.btn-facebook {
  .buttonBackground(lighten(@blueFacebook, 10%), @blueFacebook);
}

/* New Text colours
   ========================================================================== */

.text-pink {
  color: @pink;
}

